# game_ratings

./: pyproject.toml  scrapy.cfg
game_ratings/: items.py  middlewares.py  pipelines.py  settings.py
game_ratings/analyzers/: aggregation.ipynb  famitsu.ipynb  famitsu_fixed_ratings.csv  metacritic.ipynb
game_ratings/spiders/: game_mein.py  metacritic.py  soft_db.py
