[tool.poetry]
name = "game_ratings"
version = "0.1.0"
description = ""
authors = ["ch3rub1m <ch3rub1m@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.0"
pandas = "^1.3.1"
tqdm = "^4.62.0"
click = "^8.0.1"
ipykernel = "^6.1.0"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
